DeveloperOrg/force-app/main/default/objects/Doctor__c/fields/Date_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Appointment__c</fullName>
    <label>Date of Appointment</label>
    <type>Date</type>
</CustomField>