DeveloperOrg/force-app/main/default/objects/Doctor__c/fields/Medicien_List__c.field-meta.xml
<CustomField>
    <fullName>Medicien_List__c</fullName>
    <label>Medicien List</label>
    <type>TextArea</type>
</CustomField>