DeveloperOrg/force-app/main/default/objects/Doctor__c/fields/Medicien_when_to_take__c.field-meta.xml
<CustomField>
    <fullName>Medicien_when_to_take__c</fullName>
    <label>Medicien when to take</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Morning and Evening</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Morning and Afternoon</fullName>
            </value>
            <value>
                <fullName>afternoon</fullName>
            </value>
            <value>
                <fullName>Evening and Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>